--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,13 @@ Saved/*
 
 # Compiled source files for the engine to use
 **/Intermediate/*
+**/Saved/*
+**/Build/*
+**/Binaries/*
+**/Android_ASTC/*
+**/WindowsNoEditor/*
+**/Windows/*
+**/DerivedDataCache/*
 Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
