Created an overworld state that is separate from the combat state and does not utilize the grid. Used built in nav mesh to add overworld movement and unit following.

--- a/TacticalCards/Config/DefaultEngine.ini
+++ b/TacticalCards/Config/DefaultEngine.ini
@@ -134,3 +134,8 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="Ground",NewName="GridGround")
 +CollisionChannelRedirects=(OldName="GridGround",NewName="GridGroundModifiers")
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+AgentMaxStepHeight=25.000000
+AgentRadius=1.000000
+
