--- a/TacticalCards/Config/DefaultEngine.ini
+++ b/TacticalCards/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/L_Entry.L_Entry
-EditorStartupMap=/Game/Maps/L_Entry.L_Entry
+GameDefaultMap=/Game/Maps/L_MainMenu.L_MainMenu
+EditorStartupMap=/Game/Maps/L_MainMenu.L_MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/Core/Player/BP_GameMode.BP_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -57,6 +57,7 @@ bAuthorizeAutomaticWidgetVariableCreation=False
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/TacticalCards")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/TacticalCards")
+bSmoothFrameRate=True
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
